# ARINC_RDSA

./: CMakeLists.txt  README.md
source/: Arinc429.cpp  Arinc429.h  COMCon.cpp  COMCon.h  COMConQWrapper.cpp  COMConQWrapper.h  DataBaseConnection.cpp  DataBaseConnection.h  NeuralNetwork.cpp  NeuralNetwork.h  SharedBuffer.cpp  SharedBuffer.h  altitudeefi.cpp  altitudeefi.h  bodypryara.cpp  bodypryara.h  headingwidget.cpp  headingwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  speedwidget.cpp  speedwidget.h
